examples/avm-res-keyvault-vault/0.11.0/submodules/key/README.md
<!-- BEGIN_TF_DOCS -->
<!-- Code generated by terraform-docs. DO NOT EDIT. -->
# terraform-azurerm-avm-res-keyvault-vault//key

Module to deploy key vault keys.

## Usage

This sub-module can be called directly to add keys to an existing key vault:

```terraform
module "keyvault_key" {
  source  = "Azure/avm-res-keyvault-vault/azurerm//modules/key"
  version = "0.#.#" # Replace with your desired version

  key_vault_resource_id = azurerm_key_vault.this.id
  name                  = "my-key"
  type                  = "RSA"

  # Optional
  size = 2048
  opts = ["sign", "verify"]
  rotation_policy = {
    automatic = {
      time_before_expiry = "P30D"
    }
    expire_after         = "P90D"
    notify_before_expiry = "P29D"
  }
  role_assignments = {
    crypto_user = {
      role_definition_id_or_name = "Key Vault Crypto User"
      principal_id               = data.azurerm_client_config.this.object_id
    }
  }
}
```

<!-- markdownlint-disable MD033 -->
## Requirements

The following requirements are needed by this module:

- <a name="requirement_terraform"></a> [terraform](#requirement\_terraform) (>= 1.9, < 2.0)

- <a name="requirement_azurerm"></a> [azurerm](#requirement\_azurerm) (>= 4.81, < 5.1)

## Resources

The following resources are used by this module:

- [azurerm_key_vault_key.this](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/key_vault_key) (resource)
- [azurerm_role_assignment.this](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/role_assignment) (resource)

<!-- markdownlint-disable MD013 -->
## Required Inputs

The following input variables are required:

### <a name="input_key_vault_resource_id"></a> [key\_vault\_resource\_id](#input\_key\_vault\_resource\_id)

Description: The ID of the Key Vault where the key should be created.

Type: `string`

### <a name="input_name"></a> [name](#input\_name)

Description: The name of the key.

Type: `string`

### <a name="input_type"></a> [type](#input\_type)

Description: The type of the key. Possible values are `EC`, `EC-HSM`, `RSA`, and `RSA-HSM`. The values are case-sensitive. The HSM-backed types (`EC-HSM` and `RSA-HSM`) require a Key Vault with the `premium` SKU, or a Managed HSM.

Type: `string`

## Optional Inputs

The following input variables are optional (have default values):

### <a name="input_curve"></a> [curve](#input\_curve)

Description: The curve of the EC key. Required if `type` is `EC` or `EC-HSM`. Possible values are `P-256`, `P-256K`, `P-384`, and `P-521`. This field will be required in a future release if key\_type is EC or EC-HSM. The API will default to `P-256` if nothing is specified.

Type: `string`

Default: `null`

### <a name="input_expiration_date"></a> [expiration\_date](#input\_expiration\_date)

Description: The expiration date of the key as a UTC datetime (Y-m-d'T'H:M:S'Z').

Type: `string`

Default: `null`

### <a name="input_not_before_date"></a> [not\_before\_date](#input\_not\_before\_date)

Description: key not usable before as a UTC datetime (Y-m-d'T'H:M:S'Z').

Type: `string`

Default: `null`

### <a name="input_opts"></a> [opts](#input\_opts)

Description: The options to apply to the key. Possible values are `decrypt`, `encrypt`, `sign`, `wrapKey`, `unwrapKey`, and `verify`.

Type: `list(string)`

Default: `[]`

### <a name="input_role_assignments"></a> [role\_assignments](#input\_role\_assignments)

Description: A map of role assignments to create on the key. The map key is deliberately arbitrary to avoid issues where map keys maybe unknown at plan time.

- `role_definition_id_or_name` - The ID or name of the role definition to assign to the principal.
- `principal_id` - The ID of the principal to assign the role to.
- `description` - The description of the role assignment.
- `skip_service_principal_aad_check` - If set to true, skips the Azure Active Directory check for the service principal in the tenant. Defaults to false.
- `condition` - The condition which will be used to scope the role assignment.
- `condition_version` - The version of the condition syntax. If you are using a condition, valid values are '2.0'.

> Note: only set `skip_service_principal_aad_check` to true if you are assigning a role to a service principal.

Type:

```hcl
map(object({
    role_definition_id_or_name             = string
    principal_id                           = string
    description                            = optional(string, null)
    skip_service_principal_aad_check       = optional(bool, false)
    condition                              = optional(string, null)
    condition_version                      = optional(string, null)
    delegated_managed_identity_resource_id = optional(string, null)
    principal_type                         = optional(string, null)
  }))
```

Default: `{}`

### <a name="input_rotation_policy"></a> [rotation\_policy](#input\_rotation\_policy)

Description: The rotation policy of the key:

- `automatic` - The automatic rotation policy of the key.
  - `time_after_creation` - The time after creation of the key before it is automatically rotated as an ISO 8601 duration.
  - `time_before_expiry` - The time before expiry of the key before it is automatically rotated as an ISO 8601 duration.
- `expire_after` - The time after which the key expires.
- `notify_before_expiry` - The time before expiry of the key when notification emails will be sent as an ISO 8601 duration.

Type:

```hcl
object({
    automatic = optional(object({
      time_after_creation = optional(string, null)
      time_before_expiry  = optional(string, null)
    }), null)
    expire_after         = optional(string, null)
    notify_before_expiry = optional(string, null)
  })
```

Default: `null`

### <a name="input_size"></a> [size](#input\_size)

Description: The size of the RSA key, e.g. `2048` or `4096`. Required if `type` is `RSA` or `RSA-HSM`.

Type: `number`

Default: `null`

### <a name="input_tags"></a> [tags](#input\_tags)

Description: The tags to assign to the key.

Type: `map(string)`

Default: `null`

## Outputs

The following outputs are exported:

### <a name="output_e"></a> [e](#output\_e)

Description: The RSA public exponent of the Key Vault Key. Use together with `n`, which carries the modulus. Empty for EC keys.

### <a name="output_id"></a> [id](#output\_id)

Description: The versioned data plane URI of the key, in the form
`https://<vault-name>.vault.azure.net/keys/<key-name>/<key-version>`.

This is the value most Azure services expect when configuring a customer managed key,  
for example the `transparent_data_encryption_key_vault_key_id` input of the
`Azure/avm-res-sql-server/azurerm` module. It pins a specific key version. Note that  
supporting key rotation does not imply accepting a versionless URI — Azure SQL, for  
example, requires this versioned form and is told to follow rotation by a separate  
setting. Use `versionless_id` only where the consuming API documents that it accepts a  
versionless URI.

### <a name="output_n"></a> [n](#output\_n)

Description: The RSA modulus of the Key Vault Key. Use together with `e`, which carries the public exponent. Empty for EC keys.

### <a name="output_name"></a> [name](#output\_name)

Description: The name of the Key Vault Key.

### <a name="output_public_key_openssh"></a> [public\_key\_openssh](#output\_public\_key\_openssh)

Description: The OpenSSH encoded public key of the Key Vault Key. Empty for `P-256K` keys, which the provider does not derive a public key for.

### <a name="output_public_key_pem"></a> [public\_key\_pem](#output\_public\_key\_pem)

Description: The PEM encoded public key of the Key Vault Key. Empty for `P-256K` keys, which the provider does not derive a public key for.

### <a name="output_resource_id"></a> [resource\_id](#output\_resource\_id)

Description: The versioned Azure Resource Manager (ARM) resource ID of the key, in the form
`/subscriptions/<subscription-id>/resourceGroups/<resource-group-name>/providers/Microsoft.KeyVault/vaults/<vault-name>/keys/<key-name>/versions/<key-version>`.

This is an ARM resource ID, not a data plane URI. Use `id` when a service asks for a  
key vault key URI or identifier such as `https://<vault-name>.vault.azure.net/keys/...`.

### <a name="output_resource_versionless_id"></a> [resource\_versionless\_id](#output\_resource\_versionless\_id)

Description: The versionless Azure Resource Manager (ARM) resource ID of the key, in the form
`/subscriptions/<subscription-id>/resourceGroups/<resource-group-name>/providers/Microsoft.KeyVault/vaults/<vault-name>/keys/<key-name>`.

This is an ARM resource ID, not a data plane URI. Because it does not pin a key version,  
services that support it will pick up new key versions automatically.

### <a name="output_versionless_id"></a> [versionless\_id](#output\_versionless\_id)

Description: The versionless data plane URI of the key, in the form
`https://<vault-name>.vault.azure.net/keys/<key-name>`.

Because it does not pin a key version, services that support it will pick up new key  
versions automatically. Use `id` when a service requires a specific key version.

### <a name="output_x"></a> [x](#output\_x)

Description: The EC X component of the Key Vault Key. Use together with `y`, which carries the Y component. Empty for RSA keys.

### <a name="output_y"></a> [y](#output\_y)

Description: The EC Y component of the Key Vault Key. Use together with `x`, which carries the X component. Empty for RSA keys.

## Modules

No modules.

<!-- markdownlint-disable-next-line MD041 -->
## Data Collection

The software may collect information about you and your use of the software and send it to Microsoft. Microsoft may use this information to provide services and improve our products and services. You may turn off the telemetry as described in the repository. There are also some features in the software that may enable you and Microsoft to collect data from users of your applications. If you use these features, you must comply with applicable law, including providing appropriate notices to users of your applications together with a copy of Microsoft’s privacy statement. Our privacy statement is located at <https://go.microsoft.com/fwlink/?LinkID=824704>. You can learn more about data collection and use in the help documentation and our privacy statement. Your use of the software operates as your consent to these practices.
<!-- END_TF_DOCS -->
